<resources>
    <string name="_3_digit_cvc">3-Digit CVC :</string>
    <string name="aba_routing_number">ABA/Routing Number :</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_holder">Account Holder :</string>
    <string name="account_number">Account Number :</string>
    <string name="account_type">Account Type :</string>
    <string name="add_pattern">Add Pattern</string>
    <string name="address">Address :</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="albums">Albums</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="answer">Answer</string>
    <string name="app_key">apps_list</string>
    <string name="app_name">Calculator Lock Hide App Photo</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apppassword">apppassword</string>
    <string name="apps">Apps</string>
    <string name="atm">Atm</string>
    <string name="authentication_method">Authentication Method :</string>
    <string name="backup_data">✔ Backup Data</string>
    <string name="bank_name">Bank Name :</string>
    <string name="bnr_admob">ca-app-pub-3940256099942544/6300978111</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="business_status">Business Status :</string>
    <string name="card_name">Card Name</string>
    <string name="card_number">Card Number :</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="choose_your_favourite_questions">Choose your favourite Questions</string>
    <string name="city">City :</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="company">Company :</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="country_org">Country/org :</string>
    <string name="credit_card">Credit Card</string>
    <string name="custom_1">Custom 1 :</string>
    <string name="custom_2">Custom 2 :</string>
    <string name="custom_3">Custom 3 :</string>
    <string name="custom_4">Custom 4 :</string>
    <string name="custom_5">Custom 5 :</string>
    <string name="date_of_birth">Date of Birth :</string>
    <string name="date_of_issue">Date of Issue :</string>
    <string name="define_roundedimageview" />
    <string name="draw_your_security_pattern">Draw your security pattern</string>
    <string name="email">Email</string>
    <string name="email_id">Email ID :</string>
    <string name="enter_file_name">Enter File Name</string>
    <string name="enter_folder_name">Enter Folder Name</string>
    <string name="enter_folder_name_where_you_want_to_export_your_backup_data">Enter Folder Name Where You \n Want To Export Your Backup Data</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="established_date">Established Date :</string>
    <string name="expiration_date">Expiration Date :</string>
    <string name="expiry_date">Expiry Date :</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="eyes_color">Eyes Color :</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fallback_menu_item_copy_link">Copy link</string>
    <string name="fallback_menu_item_open_in_browser">Open in browser</string>
    <string name="fallback_menu_item_share_link">Share link</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="first_name">First Name :</string>
    <string name="first_time">first_time</string>
    <string name="folder_name">myfolder</string>
    <string name="for_question">question</string>
    <string name="hair_color">Hair Color :</string>
    <string name="height">Height :</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="holder_name">Holder Name :</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="id_number">ID Number :</string>
    <string name="in_what_town_was_your_first_job">In what town was your first job?</string>
    <string name="int_admob">/6499/example/interstitial</string>
    <string name="invalid_expression_message">Invalid expression</string>
    <string name="issuing_date">Issuing Date :</string>
    <string name="item_view_role_description">Tab</string>
    <string name="library_roundedimageview_author">Vince Mi</string>
    <string name="library_roundedimageview_authorWebsite">https://github.com/vinc3m1</string>
    <string name="library_roundedimageview_isOpenSource">true</string>
    <string name="library_roundedimageview_libraryDescription">A fast ImageView (and Drawable) that supports rounded corners (and ovals or circles) based on the original example from Romain Guy.</string>
    <string name="library_roundedimageview_libraryName">RoundedImageView</string>
    <string name="library_roundedimageview_libraryVersion">1.3.0</string>
    <string name="library_roundedimageview_libraryWebsite">https://github.com/vinc3m1/RoundedImageView</string>
    <string name="library_roundedimageview_licenseId">apache_2_0</string>
    <string name="library_roundedimageview_repositoryLink">https://github.com/vinc3m1/RoundedImageView.git</string>
    <string name="location_permission_missing_message">Looks like this app doesn\'t have location services configured. Please see OneSignal docs for more information.</string>
    <string name="location_permission_missing_title">App Missing Permission</string>
    <string name="location_permission_name_for_title">Location</string>
    <string name="location_permission_settings_message">sharing your device location</string>
    <string name="m3_sys_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_accelerate">cubic-bezier(0.3, 0.0, 0.8, 0.2)</string>
    <string name="m3_sys_motion_easing_emphasized_decelerate">cubic-bezier(0.1, 0.7, 0.1, 1.0)</string>
    <string name="m3_sys_motion_easing_emphasized_path_data">M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1</string>
    <string name="m3_sys_motion_easing_legacy">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="m3_sys_motion_easing_legacy_accelerate">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="note">Note :</string>
    <string name="password">Password</string>
    <string name="port">Port :</string>
    <string name="provider">Provider :</string>
    <string name="recovery_question_for_recover_password">Recovery Question for Recover Password</string>
    <string name="server">Server :</string>
    <string name="title">Title :</string>
    <string name="type">Type :</string>
    <string name="user_id">User ID :</string>
    <string name="uses_ssl">Uses SSL :</string>
    <string name="website">Website :</string>
    <string name="who_is_your_best_friend">Who is your best friend?</string>
</resources>