<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@drawable/cv_bg_color" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_above="@+id/ll">
        <LinearLayout android:orientation="horizontal" android:id="@+id/top" android:background="@drawable/cv_header" android:layout_width="match_parent" android:layout_height="@dimen/_45sdp">
            <LinearLayout android:gravity="center" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="0.2">
                <ImageView android:id="@+id/ic_back" android:layout_width="60px" android:layout_height="60px" android:src="@drawable/cv_back_state_pressed"/>
            </LinearLayout>
            <TextView android:textSize="@dimen/_14sdp" android:textColor="@color/white" android:gravity="center" android:id="@+id/tv_title" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/email" android:layout_weight="1" android:fontFamily="@font/cv_regular"/>
            <LinearLayout android:gravity="center_vertical" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="0.2">
                <ImageView android:id="@+id/ic_done" android:layout_width="100px" android:layout_height="50px" android:src="@drawable/cv_done_state_pressed"/>
            </LinearLayout>
        </LinearLayout>
        <ScrollView android:paddingTop="@dimen/_10sdp" android:paddingBottom="@dimen/_10sdp" android:scrollbars="none" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_above="@+id/layADs" android:layout_below="@+id/top" android:overScrollMode="never">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_15sdp">
                    <TextView android:textSize="@dimen/_12sdp" android:textColor="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_15sdp" android:layout_marginRight="@dimen/_15sdp" android:text="@string/title" android:fontFamily="@font/cv_regular"/>
                    <EditText android:textSize="@dimen/_12sdp" android:textColor="@color/white" android:id="@+id/edt_title" android:background="@drawable/cv_detail_bg" android:paddingLeft="@dimen/_10sdp" android:paddingRight="@dimen/_10sdp" android:layout_width="980px" android:layout_height="100px" android:layout_marginTop="15px" android:inputType="textNoSuggestions"/>
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_15sdp">
                    <TextView android:textSize="@dimen/_12sdp" android:textColor="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_15sdp" android:layout_marginRight="@dimen/_15sdp" android:text="@string/type" android:fontFamily="@font/cv_regular"/>
                    <EditText android:textSize="@dimen/_12sdp" android:textColor="@color/white" android:id="@+id/edt_type" android:background="@drawable/cv_detail_bg" android:paddingLeft="@dimen/_10sdp" android:paddingRight="@dimen/_10sdp" android:layout_width="980px" android:layout_height="100px" android:layout_marginTop="15px" android:inputType="textNoSuggestions"/>
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_15sdp">
                    <TextView android:textSize="@dimen/_12sdp" android:textColor="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_15sdp" android:layout_marginRight="@dimen/_15sdp" android:text="@string/user_id" android:fontFamily="@font/cv_regular"/>
                    <EditText android:textSize="@dimen/_12sdp" android:textColor="@color/white" android:id="@+id/edt_userid" android:background="@drawable/cv_detail_bg" android:paddingLeft="@dimen/_10sdp" android:paddingRight="@dimen/_10sdp" android:layout_width="980px" android:layout_height="100px" android:layout_marginTop="15px" android:inputType="textNoSuggestions"/>
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_15sdp">
                    <TextView android:textSize="@dimen/_12sdp" android:textColor="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_15sdp" android:layout_marginRight="@dimen/_15sdp" android:text="@string/password" android:fontFamily="@font/cv_regular"/>
                    <EditText android:textSize="@dimen/_12sdp" android:textColor="@color/white" android:id="@+id/edt_password" android:background="@drawable/cv_detail_bg" android:paddingLeft="@dimen/_10sdp" android:paddingRight="@dimen/_10sdp" android:layout_width="980px" android:layout_height="100px" android:layout_marginTop="15px" android:maxLength="6" android:inputType="textPassword"/>
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_15sdp">
                    <TextView android:textSize="@dimen/_12sdp" android:textColor="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_15sdp" android:layout_marginRight="@dimen/_15sdp" android:text="@string/website" android:fontFamily="@font/cv_regular"/>
                    <EditText android:textSize="@dimen/_12sdp" android:textColor="@color/white" android:id="@+id/edt_url" android:background="@drawable/cv_detail_bg" android:paddingLeft="@dimen/_10sdp" android:paddingRight="@dimen/_10sdp" android:layout_width="980px" android:layout_height="100px" android:layout_marginTop="15px" android:inputType="textNoSuggestions"/>
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_15sdp">
                    <TextView android:textSize="@dimen/_12sdp" android:textColor="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_15sdp" android:layout_marginRight="@dimen/_15sdp" android:text="@string/server" android:fontFamily="@font/cv_regular"/>
                    <EditText android:textSize="@dimen/_12sdp" android:textColor="@color/white" android:id="@+id/edt_server" android:background="@drawable/cv_detail_bg" android:paddingLeft="@dimen/_10sdp" android:paddingRight="@dimen/_10sdp" android:layout_width="980px" android:layout_height="100px" android:layout_marginTop="15px" android:inputType="textNoSuggestions"/>
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_15sdp">
                    <TextView android:textSize="@dimen/_12sdp" android:textColor="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_15sdp" android:layout_marginRight="@dimen/_15sdp" android:text="@string/port" android:fontFamily="@font/cv_regular"/>
                    <EditText android:textSize="@dimen/_12sdp" android:textColor="@color/white" android:id="@+id/edt_port" android:background="@drawable/cv_detail_bg" android:paddingLeft="@dimen/_10sdp" android:paddingRight="@dimen/_10sdp" android:layout_width="980px" android:layout_height="100px" android:layout_marginTop="15px" android:maxLength="4" android:inputType="number"/>
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_15sdp">
                    <TextView android:textSize="@dimen/_12sdp" android:textColor="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_15sdp" android:layout_marginRight="@dimen/_15sdp" android:text="@string/uses_ssl" android:fontFamily="@font/cv_regular"/>
                    <EditText android:textSize="@dimen/_12sdp" android:textColor="@color/white" android:id="@+id/edt_ssl" android:background="@drawable/cv_detail_bg" android:paddingLeft="@dimen/_10sdp" android:paddingRight="@dimen/_10sdp" android:layout_width="980px" android:layout_height="100px" android:layout_marginTop="15px" android:inputType="textNoSuggestions"/>
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_15sdp">
                    <TextView android:textSize="@dimen/_12sdp" android:textColor="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_15sdp" android:layout_marginRight="@dimen/_15sdp" android:text="@string/authentication_method" android:fontFamily="@font/cv_regular"/>
                    <EditText android:textSize="@dimen/_12sdp" android:textColor="@color/white" android:id="@+id/edt_authmethod" android:background="@drawable/cv_detail_bg" android:paddingLeft="@dimen/_10sdp" android:paddingRight="@dimen/_10sdp" android:layout_width="980px" android:layout_height="100px" android:layout_marginTop="15px" android:inputType="textNoSuggestions"/>
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_15sdp">
                    <TextView android:textSize="@dimen/_12sdp" android:textColor="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_15sdp" android:layout_marginRight="@dimen/_15sdp" android:text="@string/provider" android:fontFamily="@font/cv_regular"/>
                    <EditText android:textSize="@dimen/_12sdp" android:textColor="@color/white" android:id="@+id/edt_provider" android:background="@drawable/cv_detail_bg" android:paddingLeft="@dimen/_10sdp" android:paddingRight="@dimen/_10sdp" android:layout_width="980px" android:layout_height="100px" android:layout_marginTop="15px" android:inputType="textNoSuggestions"/>
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_15sdp">
                    <TextView android:textSize="@dimen/_12sdp" android:textColor="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_15sdp" android:layout_marginRight="@dimen/_15sdp" android:text="@string/note" android:fontFamily="@font/cv_regular"/>
                    <EditText android:textSize="@dimen/_12sdp" android:textColor="@color/white" android:id="@+id/edt_note" android:background="@drawable/cv_detail_bg" android:paddingLeft="@dimen/_10sdp" android:paddingRight="@dimen/_10sdp" android:layout_width="980px" android:layout_height="100px" android:layout_marginTop="15px" android:inputType="textNoSuggestions"/>
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_15sdp">
                    <TextView android:textSize="@dimen/_12sdp" android:textColor="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_15sdp" android:layout_marginRight="@dimen/_15sdp" android:text="@string/custom_1" android:fontFamily="@font/cv_regular"/>
                    <EditText android:textSize="@dimen/_12sdp" android:textColor="@color/white" android:id="@+id/edt_custom1" android:background="@drawable/cv_detail_bg" android:paddingLeft="@dimen/_10sdp" android:paddingRight="@dimen/_10sdp" android:layout_width="980px" android:layout_height="100px" android:layout_marginTop="15px" android:inputType="textNoSuggestions"/>
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_15sdp">
                    <TextView android:textSize="@dimen/_12sdp" android:textColor="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_15sdp" android:layout_marginRight="@dimen/_15sdp" android:text="@string/custom_2" android:fontFamily="@font/cv_regular"/>
                    <EditText android:textSize="@dimen/_12sdp" android:textColor="@color/white" android:id="@+id/edt_custom2" android:background="@drawable/cv_detail_bg" android:paddingLeft="@dimen/_10sdp" android:paddingRight="@dimen/_10sdp" android:layout_width="980px" android:layout_height="100px" android:layout_marginTop="15px" android:inputType="textNoSuggestions"/>
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_15sdp">
                    <TextView android:textSize="@dimen/_12sdp" android:textColor="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_15sdp" android:layout_marginRight="@dimen/_15sdp" android:text="@string/custom_3" android:fontFamily="@font/cv_regular"/>
                    <EditText android:textSize="@dimen/_12sdp" android:textColor="@color/white" android:id="@+id/edt_custom3" android:background="@drawable/cv_detail_bg" android:paddingLeft="@dimen/_10sdp" android:paddingRight="@dimen/_10sdp" android:layout_width="980px" android:layout_height="100px" android:layout_marginTop="15px" android:inputType="textNoSuggestions"/>
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_15sdp">
                    <TextView android:textSize="@dimen/_12sdp" android:textColor="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_15sdp" android:layout_marginRight="@dimen/_15sdp" android:text="@string/custom_4" android:fontFamily="@font/cv_regular"/>
                    <EditText android:textSize="@dimen/_12sdp" android:textColor="@color/white" android:id="@+id/edt_custom4" android:background="@drawable/cv_detail_bg" android:paddingLeft="@dimen/_10sdp" android:paddingRight="@dimen/_10sdp" android:layout_width="980px" android:layout_height="100px" android:layout_marginTop="15px" android:inputType="textNoSuggestions"/>
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_15sdp">
                    <TextView android:textSize="@dimen/_12sdp" android:textColor="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_15sdp" android:layout_marginRight="@dimen/_15sdp" android:text="@string/custom_5" android:fontFamily="@font/cv_regular"/>
                    <EditText android:textSize="@dimen/_12sdp" android:textColor="@color/white" android:id="@+id/edt_custom5" android:background="@drawable/cv_detail_bg" android:paddingLeft="@dimen/_10sdp" android:paddingRight="@dimen/_10sdp" android:layout_width="980px" android:layout_height="100px" android:layout_marginTop="15px" android:layout_marginBottom="20dp" android:inputType="textNoSuggestions"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
        <LinearLayout android:orientation="vertical" android:id="@+id/layADs" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_7sdp" android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <LinearLayout android:id="@+id/ll" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <include layout="@layout/_cv_ads_adsdk_layout_google_banner_ad"/>
    </LinearLayout>
</RelativeLayout>
